<resources>
    <string name="app_name">하루목표치달성</string>
    <string name="title_activity_start__view">Start_View</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_setting">통계</string>
    <string name="menu_calendar">달력</string>


    <!--일주일 리스트    -->
    <string name="day_sun">일</string>
    <string name="day_mon">월</string>
    <string name="day_tue">화</string>
    <string name="day_wed">수</string>
    <string name="day_thu">목</string>
    <string name="day_fri">금</string>
    <string name="day_sat">토</string>

   <string name="bt_day_goal_setting">매일 하루 목표 설정</string>
    <string name="tv_day_goal_add">오늘 할일</string>
    <string name="bt_dialog_Yes">확인</string>
    <string name="bt_dialog_No">취소</string>
    <string name="bt_one_set_plu">1세트+</string>
    <string name="bt_one_set_dsc">1세트-</string>
    
    <string name="tv_name">제목</string>
    <string name="tv_count">개수</string>
    <string name="tv_set">세트</string>
    <string name="tv_1set">1세트:</string>
    <string name="bt_complete">완료</string>
    <string name="bt_clear">초기화</string>




</resources>