<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_ring"
    android:background="#E9CFCFCF"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#A4AEED"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:indeterminateOnly="false"
        android:paddingBottom="30dp"
        android:layout_marginTop="15dp"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:progress="0">

    </ProgressBar>

    <TextView
        android:id="@+id/text_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
        app:layout_constraintEnd_toEndOf="@+id/progress_bar"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/progress_bar"
        app:layout_constraintTop_toTopOf="@+id/progress_bar"
        app:layout_constraintVertical_bias="0.452"
        tools:text="0%"></TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
        app:layout_constraintEnd_toEndOf="@+id/progress_bar"
        app:layout_constraintLeft_toLeftOf="@id/progress_bar"
        app:layout_constraintStart_toStartOf="@+id/progress_bar">

        <TextView
            android:gravity="center"
            android:id="@+id/tv_check_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="100"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
             />

        <TextView
            android:id="@+id/tv_center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="/"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:gravity="center"
            android:id="@+id/tv_all_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="100"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>




    <Button
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btn_plus_click"
        android:text="@string/bt_one_set_plu"
        app:layout_constraintStart_toStartOf="@+id/progress_bar"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

    <Button
        android:id="@+id/button_dsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btn_dsc_click"
        android:text="@string/bt_one_set_dsc"
        app:layout_constraintEnd_toEndOf="@+id/progress_bar"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar" />
    <Button
        android:id="@+id/bt_clean"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_clear"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="btn_all_clean"
         />

    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/layout_border"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_plus"
        app:layout_constraintVertical_bias="0.101">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_name"
            android:textColor="#000000"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="307dp" />

        <EditText
            android:id="@+id/et_exercise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#57050505"
            android:inputType="textPersonName"
            android:minEms="3"
            android:text=""
            android:textColor="#000000"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="113dp"
            tools:layout_editor_absoluteY="307dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_count"
            android:textColor="#000000"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="361dp" />

        <EditText
            android:id="@+id/et_exercise_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#57050505"
            android:inputType="number"
            android:minEms="3"

            android:text="0"
            android:textColor="#000000"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="113dp"
            tools:layout_editor_absoluteY="361dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/tv_set"
                android:textColor="#000000"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:id="@+id/tv_one_set"
                android:gravity="center_vertical"
                android:textColor="#AB737373"
                android:text="@string/tv_1set"/>


            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@android:drawable/ic_dialog_info"
                android:layout_weight="1"
                android:onClick="bt_set_info"
                android:visibility="gone"/>

        </LinearLayout>


        <EditText
            android:id="@+id/et_set_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#57050505"
            android:inputType="number"
            android:minEms="3"
            android:text="0"
            android:textColor="#000000"
            android:textSize="20dp"
            android:nextFocusDown="@id/main_ring"
            />
    </LinearLayout>

    <Button
        android:id="@+id/bt_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:focusable="false"
        android:text="@string/bt_complete"
        app:layout_constraintBottom_toTopOf="@+id/adView1"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </Button>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:descendantFocusability="blocksDescendants"
        android:focusableInTouchMode="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="SMART_BANNER"
        app:adUnitId="ca-app-pub-6723060508831262/6824608666"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>